ok not development page but whatevs, moved leagues and contracts to the same view since you always use one with the other

--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -439,7 +439,8 @@
                     .SelectMany(e => e.SessionScores)
                     .Where(e => seasonGroup.Value.Contains(e.ResultId))
                     .GroupBy(e => e.ResultId)
-                    .Select(e => e.MaxBy(r => r.Index));
+                    .Select(e => e.MaxBy(r => r.Index))
+                    .ToList();
 
                 foreach (var penaltyResult in gridResults.OrderBy(e => e.PenaltyPosition()))
                     finalQualyPosition.Add(penaltyResult.ResultId, (++positionIndexer, penaltyResult.AbsolutePosition));
