--- a/SimTECH/SimTECH/Pages/Motorsport/Contracts/Manager/ContractManager.razor
+++ b/SimTECH/SimTECH/Pages/Motorsport/Contracts/Manager/ContractManager.razor
@@ -1,4 +1,5 @@
 ﻿@page "/contractmanager"
+
 @inject ContractService _contractService
 @inject LeagueService _leagueService
 @inject DriverService _driverService
@@ -50,7 +51,7 @@
         _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
         {
             new BreadcrumbItem("Home", href: "/"),
-            new BreadcrumbItem("Contracts", href: "contracts"),
+            new BreadcrumbItem("Motorsport", href: "motorsport"),
             new BreadcrumbItem("Manager", href: "contractmanager", disabled: true),
         });
     }
