--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -16,11 +16,13 @@
         <MudNavLink Href="/climates" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Cloud">Climates</MudNavLink>
     </MudNavGroup>
 
-    <MudNavGroup Title="Motorsport" Icon="@IconCollection.SteeringWheel" @bind-Expanded="motorsportExpanded">
-        <MudNavLink Href="/leagues" Match="NavLinkMatch.Prefix" Icon="@IconCollection.Trophy">Leagues</MudNavLink>
+    @* <MudNavGroup Title="Motorsport" Icon="@IconCollection.SteeringWheel" @bind-Expanded="motorsportExpanded">
+        <MudNavLink Href="/motorsport" Match="NavLinkMatch.Prefix" Icon="@IconCollection.Trophy">Leagues</MudNavLink>
         <MudNavLink Href="/seasons" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">Seasons</MudNavLink>
-        <MudNavLink Href="/contracts" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AssignmentInd">Contracts</MudNavLink>
-    </MudNavGroup>
+    </MudNavGroup> *@
+
+    <MudNavLink Href="/motorsport" Match="NavLinkMatch.Prefix" Icon="@IconCollection.Trophy">Motorsport</MudNavLink>
+    <MudNavLink Href="/seasons" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">Seasons</MudNavLink>
 
     <MudNavGroup Title="Extra" Icon="@Icons.Material.Filled.Explicit" @bind-Expanded="extraExpanded">
         <MudNavLink Href="/stats" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.BarChart">Stats</MudNavLink>
