--- a/SimTECH/SimTECH/Pages/Motorsport/Index.razor
+++ b/SimTECH/SimTECH/Pages/Motorsport/Index.razor
@@ -19,6 +19,7 @@
                 <LeagueView />
             </MudPaper>
         </MudItem>
+        @* Doe de grid weg, maak van onderstaand een uitklap ding wanneer je contracten voor X league wil zien *@
         <MudItem xs="6">
             <MudPaper>
                 <ContractView />
