--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -442,8 +442,8 @@
                     .Select(e => e.MaxBy(r => r.Index))
                     .ToList();
 
-                foreach (var penaltyResult in gridResults.OrderBy(e => e.PenaltyPosition()))
-                    finalQualyPosition.Add(penaltyResult.ResultId, (++positionIndexer, penaltyResult.AbsolutePosition));
+                foreach (var penaltyResult in gridResults.OrderBy(e => e!.PenaltyPosition()))
+                    finalQualyPosition.Add(penaltyResult!.ResultId, (++positionIndexer, penaltyResult.AbsolutePosition));
             }
 
             await _raceService.FinishQualifying(qualySession.SessionScores, finalQualyPosition, RaceId, Model.Season.MaximumDriversInRace);
@@ -455,12 +455,12 @@
             foreach (var res in finalQualyPosition)
             {
                 var matchingDriver = Model.RaweCeekDrivers.First(e => e.ResultId == res.Key);
-                var sessionScore = qualySessionScores.First(e => e.ResultId == res.Key);
+                //var sessionScore = qualySessionScores.First(e => e.ResultId == res.Key);
 
                 matchingDriver.Grid = res.Value.Item1;
                 matchingDriver.Position = res.Value.Item1;
-                matchingDriver.AbsoluteGrid = sessionScore.AbsolutePosition;
-                matchingDriver.AbsolutePosition = sessionScore.AbsolutePosition;
+                matchingDriver.AbsoluteGrid = res.Value.Item2;
+                matchingDriver.AbsolutePosition = res.Value.Item2;
                 matchingDriver.Status = res.Value.Item1 > Model.Season.MaximumDriversInRace ? RaceStatus.Dnq : RaceStatus.Racing;
             }
 
