Autofinish when rees is done

--- a/SimTECH/SimTECH/Pages/Racing/Landing.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Landing.razor
@@ -159,7 +159,7 @@
                 [TGT]: Target position
             </MudText>
 
-            <ScreenshotButton TargetId="raceweek-landing" Colour="Color.Secondary" FullWidth="true" />
+            <ScreenshotButton TargetId="raceweek-landing" Colour="Color.Tertiary" FullWidth="true" />
         </MudPaper>
     </MudItem>
 </MudGrid>
