--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -174,20 +174,20 @@ th {
     display: none !important;
 }
 
+.muted-background-primary {
+    background-color: color-mix(in srgb, var(--mud-palette-primary) 25%, transparent) !important;
+}
+
+.muted-background-secondary {
+    background-color: color-mix(in srgb, var(--mud-palette-secondary) 25%, transparent) !important;
+}
+
+.muted-background-tertiary {
+    background-color: color-mix(in srgb, var(--mud-palette-tertiary) 25%, transparent) !important;
+}
+
 .fallback-muted-background-gray {
     background-color: rgba(230, 230, 230, 0.25) !important;
-}
-
-.fallback-muted-background-primary {
-    background-color: rgba(126, 87, 194, 0.25) !important;
-}
-
-.fallback-muted-background-secondary {
-    background-color: rgba(236, 64, 122, 0.25) !important;
-}
-
-.fallback-muted-background-tertiary {
-    background-color: rgba(255, 143, 0, 0.25) !important;
 }
 
 .font-default {
