Put some stuff nicely in it's own folders

--- a/SimTECH/SimTECH/Pages/Racing/Landing.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Landing.razor
@@ -154,7 +154,7 @@
                 He who reads is not a giraffe (presumably)
             </MudText>
 
-            <MudText Typo="Typo.body2" Color="Color.Info">
+            <MudText Class="my-2" Typo="Typo.body2" Color="Color.Info">
                 <MudIcon Icon="@IconCollection.Target" Size="Size.Small" />
                 [TGT]: Target position
             </MudText>
