Styling updoots at the race pages and such

--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
@@ -4,6 +4,7 @@
     <MudItem xs="12">
         <MudPaper MinHeight="60px" Class="pa-2 d-flex flex-row align-center justify-center">
             <MudText Typo="Typo.h3">@Model.Race.Name</MudText>
+            <ScreenshotIconButton TargetId="raceweek-landing" Colour="Color.Tertiary" />
         </MudPaper>
     </MudItem>
     <MudItem xs="3">
@@ -160,8 +161,6 @@
                 <MudIcon Icon="@IconCollection.Target" Size="Size.Small" />
                 [TGT]: Target position
             </MudText>
-
-            <ScreenshotButton TargetId="raceweek-landing" Colour="Color.Tertiary" FullWidth="true" />
         </MudPaper>
     </MudItem>
 </MudGrid>
