--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Practice.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Practice.razor
@@ -11,11 +11,11 @@
 
                     <MudSpacer />
 
-                    <MudButtonGroup Color="Color.Tertiary" Variant="Variant.Outlined">
-                        <ScreenshotButton TargetId="practice-table" Class="btn-md" />
+                    <MudButtonGroup Color="Color.Tertiary" Variant="Variant.Text">
+                        <ScreenshotIconButton TargetId="practice-table" />
                         @if (!PracticeSession.IsFinished && advancedRuns != amountRuns)
                         {
-                            <MudButton OnClick="Advance" Class="btn-md">Advance</MudButton>
+                            <MudIconButton OnClick="Advance" Icon="@IconCollection.ChevronsRight" />
                         }
                     </MudButtonGroup>
                 </MudStack>
