--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
@@ -31,11 +31,11 @@
             </MudStack>
 
             <div class="d-flex flex-row-reverse" style="width:30%">
-                <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary">
-                    <ScreenshotButton TargetId="race-display" Class="btn-md" />
+                <MudButtonGroup Variant="Variant.Text" Color="Color.Tertiary">
+                    <ScreenshotIconButton TargetId="race-display" Class="btn-md" />
                     @if (Model.Race.State != State.Closed)
                     {
-                        <MudButton OnClick="Advance" Class="btn-md">Advance</MudButton>
+                        <MudIconButton OnClick="Advance" Icon="@IconCollection.ChevronsRight" />
                     }
                 </MudButtonGroup>
             </div>
