--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/CalendarTab/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/CalendarTab/Calendar.razor
@@ -1,4 +1,4 @@
-﻿<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="px-0">
+﻿<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="px-0" id="current-season-calendar-races-overview">
     <MudPaper MinHeight="60px">
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Races</MudText>
@@ -15,6 +15,7 @@
                     Add races
                 </MudButton>
             }
+            <ScreenshotIconButton TargetId="current-season-calendar-races-overview" Colour="Color.Secondary" />
         </MudStack>
     </MudPaper>
     <MudTable T="CalendarList" Items="@seasonCalendar.OrderBy(e => e.Round)" Dense="true" Loading="@loading">
