--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/StandingsTab/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/StandingsTab/Standings.razor
@@ -6,9 +6,8 @@
             <MudItem xs="12">
                 <MudPaper Height="75px" Class="pa-2">
                     <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center">
-                        <span class="btn-md"></span>
                         <MudText Typo="Typo.h3">Season standings for @OverviewModel.Season.Year</MudText>
-                        <ScreenshotButton TargetId="standings-numerical-overview" Class="btn-md" />
+                        <ScreenshotIconButton TargetId="standings-numerical-overview" />
                     </MudStack>
                 </MudPaper>
             </MudItem>
