--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/EntrantsTab/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/EntrantsTab/PowerRankings.razor
@@ -1,7 +1,8 @@
-﻿<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="px-0">
+﻿<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="px-0" id="power-rankings-overview">
     <MudPaper MinHeight="60px">
-        <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
+        <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Power rankings</MudText>
+            <ScreenshotIconButton TargetId="power-rankings-overview" />
         </MudStack>
     </MudPaper>
     <MudDataGrid T="PowerRankingItem" Items="@PowahList" Dense="true" Loading="@loading">
