--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/StandingsTab/DriverResults.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/StandingsTab/DriverResults.razor
@@ -9,9 +9,9 @@
             <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4 mud-width-full">
                 <MudText Typo="Typo.h4">World Drivers Championship @OverviewModel.Season.Year</MudText>
                 <MudSpacer />
-                <MudButtonGroup Color="Color.Secondary" Variant="Variant.Outlined">
-                    <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" OnClick="ShowWdcResultGraph" Class="btn-md" />
-                    <ScreenshotButton TargetId="wdc-season-results" Class="btn-md" />
+                <MudButtonGroup Color="Color.Secondary" Variant="Variant.Text">
+                    <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" OnClick="ShowWdcResultGraph" />
+                    <ScreenshotIconButton TargetId="wdc-season-results" />
                 </MudButtonGroup>
             </MudStack>
         </ToolBarContent>
@@ -90,6 +90,6 @@
     async Task ShowWdcResultGraph()
     {
         var parameters = new DialogParameters { ["Drivers"] = StandingDrivers, ["Season"] = OverviewModel.Season };
-        _ = await _dialog.ShowAsync<WdcResultChart>("WDC results chart", parameters, customOptions);
+        _ = await _dialog.ShowAsync<WdcResultChart>("WDC results chart", parameters, Globals.StatisticDialogDefaultOptionsXl);
     }
 }
