Possibly removed some not needed components but it isnt completely ok yet so double check and such

--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
@@ -91,7 +91,9 @@
                         <PenaltyBadge Penalty="@context.Penalty">
                             @if (context.Status == RaceStatus.Dnq)
                             {
-                                <ResultLabel Text="@context.Status.ReadableStatus()" Style="@context.Status.StatusStyles()" />
+                                <div class="result-cell" style="@context.Status.StatusStyles()">
+                                    <ResultLabel Text="@context.Status.ReadableStatus()" />
+                                </div>
                             }
                             else
                             {
