--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/PostRace.razor
@@ -43,7 +43,9 @@
                             }
                             else
                             {
-                                <ResultLabel Text="@context.Status.ReadableStatus()" Style="@context.Status.StatusStyles()" />
+                                <div class="result-cell" style="@context.Status.StatusStyles()">
+                                    <ResultLabel Text="@context.Status.ReadableStatus()" />
+                                </div>
                             }
                         </MudTd>
                         <MudTd Class="number-col">
