--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/StandingsTab/ConstructorResults.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/StandingsTab/ConstructorResults.razor
@@ -56,7 +56,8 @@
                 {
                     @foreach (var result in teamResults)
                     {
-                        <ResultCell Result="@result" LowestScoringPosition="@lowestScoringPosition" OverrideTypo="Typo.caption" WithBonus="false" />
+                        <ResultLabel Text="@result.GetResultText()"
+                                     Style="@result.GetResultStyle(lowestScoringPosition)" />
                     }
                 }
                 else
