--- a/SimTECH/SimTECH/Components/ResultLabel.razor
+++ b/SimTECH/SimTECH/Components/ResultLabel.razor
@@ -1,10 +1,10 @@
-﻿<div class="result-cell" style="@_cellStyles">
+﻿<div>
     <MudStack Row="true"
               Spacing="1"
               Justify="Justify.Center"
               AlignItems="AlignItems.Center"
               Class="pa-0 mud-width-full"
-              Style="color:inherit">
+              Style="@_cellStyles">
         <MudText Typo="@Typo" Color="Color.Inherit">@Text</MudText>
         @if (HasPole)
         {
@@ -28,7 +28,7 @@
     {
         get
         {
-            return Style ?? string.Empty;
+            return Style ?? "color: inherit";
         }
     }
 }
